@@ -1688,6 +1688,7 @@ QR =
         delete @onready
       else
         return
+      $.addClass QR.el, 'captcha'
       $.after $('.textarea', QR.el), $.el 'div',
         className: 'captchaimg'
         title: 'Reload'
@@ -4544,8 +4545,11 @@ h1 {
 }
 #qr textarea.field {
   display: -webkit-box;
-  min-height: 120px;
+  min-height: 160px;
   min-width: 100%;
+}
+#qr.captcha textarea.field {
+  min-height: 120px;
 }
 .textarea {
   position: relative;
