@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).
 
 2.35.2
 - Mayhem
